# versioning_documentations

./: pyproject.toml
docport/portal/: admin.py  models.py  urls.py  views.py
docport/portal/migrations/: 0001_initial.py
docport/portal/static/portal/: style.css
docport/portal/templates/portal/: article_form.html  article_list.html  base.html  index.html  login.html
docport/portal/templates/portal/snippets/: about_us.html  common_menu_list.html  footer.html  logo.html  menu_bar.html  user_badge.html
docport/system/: settings.py  urls.py
