[tool.poetry]
name = "versioning-documentations"
version = "0.1.0"
description = ""
authors = ["Vitaliy Turkevich <vetalturkevich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
